--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,8 +1,12 @@
 {
-    "editor.minimap.enabled": false,
-    "editor.renderWhitespace": "all",
-    "workbench.colorTheme": "Night Owl (No Italics)",
-    "breadcrumbs.enabled": false,
-    "editor.cursorBlinking": "solid",
-    "window.commandCenter": false
+  "$schema": "vscode://schemas/settings/user",
+  "editor.minimap.enabled": false,
+  "editor.renderWhitespace": "all",
+  "workbench.colorTheme": "Night Owl (No Italics)",
+  "breadcrumbs.enabled": false,
+  "editor.cursorBlinking": "solid",
+  "window.commandCenter": false,
+  "editor.tabSize": 2,
+  "editor.bracketPairColorization.independentColorPoolPerBracketType": true,
+  "editor.stickyScroll.enabled": false
 }
