--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -26,5 +26,6 @@
   },
   "typescript.updateImportsOnFileMove.enabled": "always",
   "workbench.colorTheme": "Night Owl (No Italics)",
-  "emmet.triggerExpansionOnTab": true
+  "emmet.triggerExpansionOnTab": true,
+  "[typescript]": {}
 }
