chore: Update vscode settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -29,5 +29,6 @@
   "emmet.triggerExpansionOnTab": true,
   "emmet.includeLanguages": {
     "astro": "html"
-  }
+  },
+  "chat.commandCenter.enabled": false
 }
