--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,9 @@
 
   "nix.serverSettings": {
     "nixd": {
+      "nixpkgs": {
+        "expr": "import (builtins.getFlake \"${workspaceFolder}\").inputs.nixpkgs { }"
+      },
       "options": {
         "home-manager": {
           "expr": "(builtins.getFlake \"${workspaceFolder}\").darwinConfigurations.macbook-pro.options.home-manager.users.type.getSubOptions []"
