--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "editor.defaultFormatter": "biomejs.biome",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-      "quickfix.biome": "explicit"
+      "source.organizeImports.biome": "explicit",
+      "source.fixAll.biome": "explicit"
     }
   },
   "[nix]": {
